Fix caster checkbox spacing

--- a/Myth-Weavers-Pathfinder-Experimental-Fixes.user.styl
+++ b/Myth-Weavers-Pathfinder-Experimental-Fixes.user.styl
@@ -4,7 +4,7 @@
 @homepageURL    https://github.com/AnthemV/Nordic-Myth-Weavers
 @supportURL     https://github.com/AnthemV/Nordic-Myth-Weavers/issues
 @updateURL      https://github.com/AnthemV/Nordic-Myth-Weavers/raw/main/Myth-Weavers-Pathfinder-Experimental-Fixes.user.styl
-@version        1.1.0
+@version        1.1.1
 @description    Spacing fixes for Myth-Weavers's experimental Pathfinder character sheet.
 @author         Ian Crawford
 @license        MIT
@@ -37,6 +37,11 @@ input[placeholder="type"]{
     
     #character_txt input[type="text"] {
   font-size: 16px;
+}
+
+input[name="caster"]{
+   margin-top: 0px;
+   margin-bottom: 2px;
 }
     
 }
